--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           key:  ${{ secrets.KEY }}
           port:  ${{ secrets.PORT }}
           script: |
-               cd ~/CICD
+               cd /home/ubuntu/github/node__ci_cd__aws
                git pull origin main
                npm install
                pm2 restart api
