--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
                cd /home/ubuntu/github/node__ci_cd__aws
                git pull origin main
                npm install
-               pm2 restart api
+               pm2 delete api
+               pm2 start index.js --name api
             
 
